# Tetris

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
CMake/: Application.cmake  CMakeLists.txt  Configure.cmake  CopyTarget.cmake  ExternalTarget.cmake  rename_initial_template.py
Source/: Application.cpp  Application.h  Board.cpp  Board.h  CMakeLists.txt  Game.cpp  Game.h  GameManager.cpp  GameManager.h  GameOver.cpp  GameOver.h  HighScores.cpp  HighScores.h  Main.cpp  MainMenu.cpp  MainMenu.h  Piece.cpp  Piece.h  RenderUtils.cpp  RenderUtils.h  Resources.cpp  Resources.h  Settings.cpp  Settings.h  Splash.cpp  Splash.h  State.cpp  State.h  TimedCallback.cpp  TimedCallback.h
Source/Content/: Swatches.xd  settings.json
Source/Resource/: AppIcon.rc
docs/: Tetris.js  index.html
